@@ -39,6 +39,37 @@ public:
 	//! Gets the light data associated with this ILightSceneNode
 	/** \return The light data. */
 	virtual video::SLight& getLightData() = 0;
+
+	//! Sets the light's radius of influence.
+	/** Outside this radius the light won't lighten geometry and cast no
+	shadows. Setting the radius will also influence the attenuation, setting
+	it to (0,1/radius,0). If you want to override this behavior, set the
+	attenuation after the radius.
+	\param radius The new radius. */
+	virtual void setRadius(f32 radius) = 0;
+
+	//! Gets the light's radius of influence.
+	/** \return The current radius. */
+	virtual f32 getRadius() const = 0;
+
+	//! Sets the light type.
+	/** \param type The new type. */
+	virtual void setLightType(video::E_LIGHT_TYPE type) = 0;
+
+	//! Gets the light type.
+	/** \return The current light type. */
+	virtual video::E_LIGHT_TYPE getLightType() const = 0;
+
+	//! Sets whether this light casts shadows.
+	/** Enabling this flag won't automatically cast shadows, the meshes
+	will still need shadow scene nodes attached. But one can enable or
+	disable distinct lights for shadow casting for performance reasons.
+	\param shadow True if this light shall cast shadows. */
+	virtual void enableCastShadow(bool shadow=true) = 0;
+
+	//! Check whether this light casts shadows.
+	/** \return True if light would cast shadows, else false. */
+	virtual bool getCastShadow() const = 0;
 };
 
 } // end namespace scene
